<resources>
    <string name="app_name" translatable="false">KinetiX</string>

    <!--    Menu -->
    <string name="action_settings">Settings app</string>
    <string name="action_settings_kinetix">Settings KinetiX</string>
    <string name="action_about">About</string>

    <string name="first_fragment_label" translatable="false">KinetiX</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="openPinch">Open Pinch</string>
    <string name="closedPinch">Closed Pinch</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="ok">Ok</string>
    <string name="demo">Demo</string>
    <string name="scratch">Scratch</string>
    <string name="come">Come here</string>
    <string name="love">Love</string>
    <string name="rock">Rock</string>

    <string name="calibration">Calibration</string>

    <!-- OTA -->
    <string name="ota_update">Firmware update (OTA)</string>
    <string name="ota_confirm_title">Firmware update</string>
    <string name="ota_confirm_message">Upload firmware file:\n%1$s ?</string>
    <string name="ota_starting">Starting OTA…</string>
    <string name="ota_uploading">Uploading firmware…</string>
    <string name="ota_done">OTA complete (device will reboot)</string>
    <string name="ota_ready_timeout">No response from device (OTA_READY timeout)</string>
    <string name="ota_no_file">No firmware file selected</string>
    <string name="ota_http_ok">Upload finished (HTTP %1$d)</string>
    <string name="ota_http_fail">Upload failed (HTTP %1$d)</string>
    <string name="ota_http_exception">Upload error: %1$s</string>
    <string name="fu" translatable="false">Fuck you</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_calibration">Start Calibration</string>
    <string name="confirm_ota">Start OTA</string>
    <string name="calibMessage">Cancel if servos are already wired!</string>
    <string name="calibTitle">WARNING</string>
    <string name="tools">Tools</string>
    <string name="closeView">Close</string>
    <string name="prefixPositionLabel">Prefix position commands with \"position\"</string>
    <string name="voiceControlDisabled">Voice control is disabled in App settings</string>

    <string name="notConnected">Not connected to KinetiX device</string>
    <string name="connectionFailed">Connection failed</string>
    <string name="noMacAddress">Please configure MAC Address in settings</string>
    <string name="preference_file_key" translatable="false">fr.reivaxy.kinetix.PREFERENCE_FILE_KEY</string>
    <string name="saved_version_key" translatable="false">versionKey</string>
    <string name="macAddressKey" translatable="false">macAddress</string>
    <string name="voiceControl" translatable="true">Voice Control</string>
    <string name="voiceControlKey" translatable="false">voiceControl</string>
    <string name="device_list_title">List of KinetiX devices</string>
    <string name="device_list_pick">Tap the device you want to connect to</string>


    <color name="red">#E31616</color>
    <color name="green">#FF3CE316</color>
    <color name="orange">#E0790A</color>
    <color name="yellow">#F4E01B</color>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="title_activity_tools" translatable="false">ToolsActivity</string>

    <!-- App Settings  -->
    <string name="kinetixDevice">KinetiX device</string>
    <string name="macAddress">MAC Address</string>
    <string name="deviceName">Device name</string>
    <string name="buttonsPosition">Buttons position</string>
    <string name="safeFilter">Safe filter</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="buttonsPositionKey" translatable="false">buttonsPosition</string>
    <string name="githubLink" translatable="false"><u>https://github.com/reivaxy/kinetix</u></string>
    <string name="ccLink" translatable="false"><u>https://creativecommons.org/licenses/by-nc-sa/4.0/</u></string>
    <string name="action_devices">Devices</string>
    <string name="title_activity_device_list" translatable="false">DeviceListActivity</string>
    <string name="large_text" translatable="false">Large Text ?</string>
    <string name="languagePackageMessage">To use voice recognition in %s, you must download this offline language package in the Google Assistant, and restart the application</string>
    <string name="audioAuthorization">To use voice recognition you need to grant permissions</string>

    <string name="ota_wifi_ssid_hint">Wi‑Fi SSID</string>
    <string name="ota_wifi_password_hint">Wi‑Fi password</string>
    <string name="error_ssid_required">SSID is mandatory</string>
    <string name="error_password_required">Password is mandatory</string>
    <string name="copy">Copy</string>

    <!-- KinetiX settings -->
    <string name="title_activity_kinetix_settings">Settings KinetiX</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="firmware_settings">Firmware settings</string>
    <string name="experimental_settings">Experiments settings</string>
    <string name="flags">Flags</string>
    <string name="flag">Flag</string>
    <string name="flag1">Flag 1</string>
    <string name="flag2">Flag 2</string>
    <string name="flag3">Flag 3</string>
    <string name="flag4">Flag 4</string>

    <string name="integers">Integers</string>
    <string name="integer1">Int 1</string>
    <string name="integer2">Int 2</string>
    <string name="integer3">Int 3</string>
    <string name="integer4">Int 4</string>

    <string name="strings">Strings</string>
    <string name="string1">String 1</string>
    <string name="string2">String 2</string>
    <string name="string3">String 3</string>
    <string name="string4">String 4</string>

    <!-- Password -->
    <string name="password_required">Password Required</string>
    <string name="enter_password">Enter password:</string>
    <string name="current_password">Current password:</string>
    <string name="new_password_optional">New password (optional):</string>
    <string name="reset_password">Reset password to empty string</string>
    <string name="send">Send</string>
    <string name="password_error">Incorrect password</string>
    <string name="password_settings">Password Settings</string>
    <string name="btn_password">Password</string>


</resources>