<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/kinetixDevice">

        <EditTextPreference
            app:key="macAddress"
            app:title="@string/macAddress"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="deviceName"
            app:title="@string/deviceName"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/voiceControlKey"
            android:title="@string/voiceControl"
            >
        </SwitchPreference>

        <SwitchPreference
            android:defaultValue="false"
            android:key="safeFilter"
            android:title="@string/safeFilter">
        </SwitchPreference>

        <ListPreference
            app:defaultValue="center"
            app:entries="@array/buttonsPosition_entries"
            app:entryValues="@array/buttonsPosition_values"
            app:key="@string/buttonsPositionKey"
            app:title="@string/buttonsPosition"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>