<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.reivaxy.kinetix.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings_kinetix"
        android:orderInCategory="101"
        android:title="@string/action_settings_kinetix"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_devices"
        android:orderInCategory="102"
        android:title="@string/action_devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_password"
        android:orderInCategory="103"
        android:title="@string/btn_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tools"
        android:orderInCategory="104"
        android:title="@string/tools"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>